# Proj

./: Cargo.toml  justfile
src/: cli.rs  dependencies.rs  errors.rs  main.rs  templates.rs
templates/: .gitignore  .pre-commit-config.yaml  justfile  pyproject_tools.toml
