[package]
name = "proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
include_dir = "0.7.3"
strum = { version = "0.25.0", features = ["derive"] }
